--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -9,7 +9,7 @@
             <img src="../../../assets/img/aboutUSImg/bodyImgSvg.svg" class="numberH">
         </div>
         <div class="col-lg-8">
-            <h1 class="titles mb-5">ABOUT NIU</h1>
+            <h1 class="titles mb-5 titleBig">ABOUT NIU</h1>
             <p class="textColor fontResponsive">
                 NIU (NIU Technologies) (NASDAQ: NIU), founded in 2014, is the world’s leading provider of smart urban
                 mobility solutions. NIU is committed to continuously provide global customers more convenient and more
@@ -34,11 +34,11 @@
                 Asia, Europe and Latin America. NIU also continues to expand support for sharing businesses globally
                 with 20 sharing operators in 13 countries providing SaaS solutions for electric two wheelers.
             </p>
-            <h1 class="titles my-5">MISSION</h1>
+            <h1 class="titles my-5 titleBig">MISSION</h1>
             <p class="textColor mb-5 fontResponsive">
                 Our mission is to redefine urban mobility and make life better.
             </p>
-            <h1 class="titles">VISION</h1>
+            <h1 class="titles titleBig">VISION</h1>
             <p class="textColor my-5 fontResponsive">
                 Our vision is to become the number one brand for urban mobility that is powered by design and technology.
             </p>
