--- a/src/app/components/app-page/app-page.component.html
+++ b/src/app/components/app-page/app-page.component.html
@@ -19,12 +19,12 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid my-5">
     <h1 class="text-center fontColorRed">NIU App</h1>
 </div>
-<div class="container mt-5">
+<div class="container mt-5 containerBigTwo">
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-flex justify-content-center">
             <figure class="hover-rotate">
                 <img src="assets/img/appPageImg/appRotateOne.jpg" />
             </figure>
@@ -33,29 +33,29 @@
             <h1 class="fontColorRed text-center">
                 <i class="fas fa-satellite-dish fontSizeResponsiveThree"></i>
             </h1>
-            <p class="mt-5 textColorGray fontSizeResponsiveTwo">
+            <p class="mt-5 textColorGray fontSizeResponsiveTwo parrafBig">
                 The NQi-Series has an on-board computer that constantly communicates with the cloud so you can receive
                 real-time data on your mobile phone like:
             </p>
             <ul class="mt-4 list-group">
-                <li class="list-group-item textColorGray">Anti-theft alerts.</li>
-                <li class="list-group-item textColorGray">Daily riding habits.</li>
-                <li class="list-group-item textColorGray">Diagnostics.</li>
-                <li class="list-group-item textColorGray">Power supply.</li>
-                <li class="list-group-item textColorGray">Navigation to the nearest service station.</li>
+                <li class="list-group-item textColorGray parrafBig">Anti-theft alerts.</li>
+                <li class="list-group-item textColorGray parrafBig">Daily riding habits.</li>
+                <li class="list-group-item textColorGray parrafBig">Diagnostics.</li>
+                <li class="list-group-item textColorGray parrafBig">Power supply.</li>
+                <li class="list-group-item textColorGray parrafBig">Navigation to the nearest service station.</li>
             </ul>
-            <h3 class="textColorGray my-5 text-center">Peace of Mind</h3>
+            <h3 class="textColorGray my-5 text-center parrafBig">Peace of Mind</h3>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBigTwo">
     <div class="row">
         <div class="col-lg-6">
             <h1 class="text-center pt-3">
                 <i class="fas fa-wifi fontColorRed fontSizeResponsiveThree"></i>
             </h1>
             <h1 class="text-center my-5">NQi-Series + NIU Cloud + APP</h1>
-            <h4 class="textColorGray text-center fontSizeResponsiveTwo">A Connected Scooter</h4>
+            <h4 class="textColorGray text-center fontSizeResponsiveTwo parrafBig">A Connected Scooter</h4>
         </div>
         <div class="col-lg-6 d-flex justify-content-center">
             <figure class="hover-rotate">
@@ -64,7 +64,7 @@
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBigTwo">
     <div class="row">
         <div class="col-lg-6 d-flex justify-content-center align-items-center">
             <figure class="hover-rotate">
@@ -73,44 +73,44 @@
         </div>
         <div class="col-lg-6">
             <h1 class="text-center">A Smart NIU</h1>
-            <h3 class="textColorGray my-5">Connected and Smart</h3>
-            <p class="textColorGray fontSizeResponsiveTwo">Real-time GPS / Anti-theft Alert + Alarm / Real-time diagnostics / Service Station
+            <h3 class="textColorGray my-5 parrafBig">Connected and Smart</h3>
+            <p class="textColorGray fontSizeResponsiveTwo parrafBig">Real-time GPS / Anti-theft Alert + Alarm / Real-time diagnostics / Service Station
                 Directory</p>
-            <p class="textColorGray mb-5 fontSizeResponsiveTwo">In a world of connected devices, we asked why are scooters disconnected from
+            <p class="textColorGray mb-5 fontSizeResponsiveTwo parrafBig">In a world of connected devices, we asked why are scooters disconnected from
                 the
                 cloud? We set out to change this.</p>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBigTwo">
     <div class="row">
         <div class="col-lg-6">
-            <h1 class="text-center fw-bold my-5">Notification Center</h1>
-            <div class="mt-5 d-flex">
+            <h1 class="text-center fw-bold my-5 padding">Notification Center</h1>
+            <div class="mt-5 d-flex justify-content-center">
                 <ul class="list-group list-group-horizontal mt-5">
-                    <li class="liBorder list-group-item">
+                    <li class="liBorder list-group-item list-group-item-notification">
                         <h3 class="d-flex justify-content-center borderImg">
-                            <img src="assets/img/appPageImg/notificationImg/oneNotification.png" class="liWidth">
+                            <img src="assets/img/appPageImg/notificationImg/oneNotification.png" class="liWidth imgNotificationCenter">
                         </h3>
-                        <p class="liText text-center">Alarm Update</p>
+                        <p class="liText text-center parrafBig">Alarm Update</p>
                     </li>
-                    <li class="liBorder list-group-item">
+                    <li class="liBorder list-group-item list-group-item-notification">
                         <h3 class="d-flex justify-content-center borderImg">
-                            <img src="assets/img/appPageImg/notificationImg/twoNotification.png" class="liWidth">
+                            <img src="assets/img/appPageImg/notificationImg/twoNotification.png" class="liWidth imgNotificationCenter">
                         </h3>
-                        <p class="liText text-center">Location Update</p>
+                        <p class="liText text-center parrafBig">Location Update</p>
                     </li>
-                    <li class="liBorder list-group-item">
+                    <li class="liBorder list-group-item list-group-item-notification">
                         <h3 class="d-flex justify-content-center borderImg">
-                            <img src="assets/img/appPageImg/notificationImg/threeNotification.png" class="liWidth">
+                            <img src="assets/img/appPageImg/notificationImg/threeNotification.png" class="liWidth imgNotificationCenter">
                         </h3>
-                        <p class="liText text-center">Status Update</p>
+                        <p class="liText text-center parrafBig">Status Update</p>
                     </li>
-                    <li class="liBorder list-group-item">
+                    <li class="liBorder list-group-item list-group-item-notification">
                         <h3 class="d-flex justify-content-center borderImg">
-                            <img src="assets/img/appPageImg/notificationImg/fourNotification.png" class="liWidth">
+                            <img src="assets/img/appPageImg/notificationImg/fourNotification.png" class="liWidth imgNotificationCenter">
                         </h3>
-                        <p class="liText text-center">Service Update</p>
+                        <p class="liText text-center parrafBig">Service Update</p>
                     </li>
                 </ul>
             </div>
