--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -25,53 +25,53 @@
     </div>
 </div>
 <div class="container mt-5 borderPer">
-    <h1 class="text-center fontColor fontSizeResponsive">Niu lifestyle</h1>
+    <h1 class="text-center fontColor fontSizeResponsive titleBig">Niu lifestyle</h1>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
             <div class="image-card perspective-left imageCardBackground imgResponsive"></div>
         </div>
         <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6 flex-column">
-            <i class="fas fa-charging-station fontColor fs-1 pb-5 fontSizeResponsive"></i>
-            <p class="fontSizeResponsiveTwo">With electric mobility we can lower the levels of pollution in our cities, even recover the ozone layer.</p>
-            <h5 class="fontColor py-3 fontSizeResponsive">What does this show?</h5>
-            <p class="fontSizeResponsiveTwo">That the reduction of toxic gases and CO2 on our planet is a very powerful strategy to face climate change and stop it.</p>
+            <i class="fas fa-charging-station fontColor fs-1 pb-5 fontSizeResponsive titleBig"></i>
+            <p class="fontSizeResponsiveTwo parrafBig">With electric mobility we can lower the levels of pollution in our cities, even recover the ozone layer.</p>
+            <h5 class="fontColor py-3 fontSizeResponsive titleBig">What does this show?</h5>
+            <p class="fontSizeResponsiveTwo parrafBig">That the reduction of toxic gases and CO2 on our planet is a very powerful strategy to face climate change and stop it.</p>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-md-12 col-lg-6 flex-column">
-            <i class="fas fa-crown fontColor fs-1 pb-5 fontSizeResponsive"></i>
-            <h1 class="pb-5">Bosch motors</h1>
-            <p class="fontSizeResponsiveTwo">We know it, we have the highest technology so that you can enjoy the tours with greater peace of mind.</p>
+            <i class="fas fa-crown fontColor fs-1 pb-5 fontSizeResponsive titleBig"></i>
+            <h1 class="pb-5 titleBig">Bosch motors</h1>
+            <p class="fontSizeResponsiveTwo parrafBig">We know it, we have the highest technology so that you can enjoy the tours with greater peace of mind.</p>
         </div>
         <div class="col-md-12 col-lg-6">
             <div class="image-card perspective-right imageCardBackgroundTwo imgResponsive"></div>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row d-flex justify-content-center align-items-center text-center">
         <div class="col-md-12 col-lg-6">
             <div class="image-card perspective-left imageCardBackgroundThree imgResponsive"></div>
         </div>
         <div class="col-md-12 col-lg-6 flex-column">
-            <i class="fas fa-volume-mute fontColor fs-1 pb-5 fontSizeResponsive"></i>
-            <h2>Can you imagine cities without car noise?</h2>
-            <p class="fontSizeResponsiveTwo">Let's start by doing our part.</p>
-            <h5 class="fontColor py-3 fontSizeResponsive">Go to NIU</h5>
+            <i class="fas fa-volume-mute fontColor fs-1 pb-5 fontSizeResponsive titleBig"></i>
+            <h2 class="parrafBig">Can you imagine cities without car noise?</h2>
+            <p class="fontSizeResponsiveTwo parrafBig">Let's start by doing our part.</p>
+            <h5 class="fontColor py-3 fontSizeResponsive titleBig">Go to NIU</h5>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row">
         <div class="col-6 d-flex align-items-center text-center flex-column justify-content-center">
-            <i class="fas fa-biking fs-1 pb-5 fontColor fontSizeResponsive"></i>
-            <h1 class="pb-3">Different colors</h1>
-            <h3 class="mb-5">For different personalities</h3>
-            <h5 class="fontSizeResponsiveTwo">Mark the difference!!</h5>
+            <i class="fas fa-biking fs-1 pb-5 fontColor fontSizeResponsive titleBig"></i>
+            <h1 class="pb-3 titleBig">Different colors</h1>
+            <h3 class="mb-5 parrafBig">For different personalities</h3>
+            <h5 class="fontSizeResponsiveTwo parrafBig">Mark the difference!!</h5>
         </div>
         <div class="col-6">
             <div id="carouselOneHome" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
@@ -104,7 +104,7 @@
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row">
         <div class="col-6">
             <div id="carouselTwoHome" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -130,18 +130,18 @@
             </div>
         </div>
         <div class="col-6 d-flex align-items-center text-center flex-column justify-content-center">
-            <i class="fas fa-route fs-1 pb-5 fontColor fontSizeResponsive"></i>
-            <h1 class="pb-3">Different autonomies</h1>
-            <h3>To supply all your needs</h3>
-            <p class="pt-3 fs-6 fontSizeResponsiveTwo">It's time to get around on an NIU electric motorcycle.</p>
-            <h4 class="fontColor fontSizeResponsiveTwo">What are you waiting for!!</h4>
+            <i class="fas fa-route fs-1 pb-5 fontColor fontSizeResponsive titleBig"></i>
+            <h1 class="pb-3 titleBig">Different autonomies</h1>
+            <h3 class="parrafBig">To supply all your needs</h3>
+            <p class="pt-3 fs-6 fontSizeResponsiveTwo parrafBig">It's time to get around on an NIU electric motorcycle.</p>
+            <h4 class="fontColor fontSizeResponsiveTwo parrafBig">What are you waiting for!!</h4>
         </div>
     </div>
 </div>
-<div class="container my-5">
+<div class="container my-5 containerBig">
     <div class="row my-5">
         <div class="header d-flex align-items-center justify-content-center my-5">
-            <h2 class="fw-bold fs-1">NIU INSPIRE</h2>
+            <h2 class="fw-bold fs-1 titleBig">NIU INSPIRE</h2>
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
@@ -153,8 +153,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title fontSizeResponsiveThree">10,500,634,500<sup class="fs-6">KM</sup></h1>
-                                <p class="card-text fontSizeResponsiveTwo">Total distance covered</p>
+                                <h1 class="card-title fontSizeResponsiveThree titleBig">10,500,634,500<sup class="fs-6 parrafBig">KM</sup></h1>
+                                <p class="card-text fontSizeResponsiveTwo parrafBig">Total distance covered</p>
                             </div>
                         </div>
                     </div>
@@ -169,8 +169,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title fontSizeResponsiveThree">22,500</h1>
-                                <p class="card-text fontSizeResponsiveTwo">Number of riders today</p>
+                                <h1 class="card-title fontSizeResponsiveThree titleBig">22,500</h1>
+                                <p class="card-text fontSizeResponsiveTwo parrafBig">Number of riders today</p>
                             </div>
                         </div>
                     </div>
@@ -187,8 +187,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title fontSizeResponsiveThree">2,625,616,896<sup class="fs-6"> KG</sup></h1>
-                                <p class="card-text fontSizeResponsiveTwo">CO₂ avoided</p>
+                                <h1 class="card-title fontSizeResponsiveThree titleBig">2,625,616,896<sup class="fs-6 parrafBig"> KG</sup></h1>
+                                <p class="card-text fontSizeResponsiveTwo parrafBig">CO₂ avoided</p>
                             </div>
                         </div>
                     </div>
@@ -203,8 +203,8 @@
                         </div>
                         <div class="col-md-8 containerCard">
                             <div class="card-body bodyCard">
-                                <h1 class="card-title fontSizeResponsiveThree">131,280,512</h1>
-                                <p class="card-text fontSizeResponsiveTwo">Equivalent to this plant nº of pines</p>
+                                <h1 class="card-title fontSizeResponsiveThree titleBig">131,280,512</h1>
+                                <p class="card-text fontSizeResponsiveTwo parrafBig">Equivalent to this plant nº of pines</p>
                             </div>
                         </div>
                     </div>
