--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg bgRed">
-    <div class="container container-xxl">
+    <div class="container containerBig">
         <a class="navbar-brand text-white justify-content-center d-flex align-items-center fw-bold textNav" routerLink="/">
-            <img src="./assets/img/logoNiuSvg.svg" alt="" width="65" class="d-inline-block align-text-top me-2">
+            <img src="./assets/img/logoNiuSvg.svg" alt="" width="65" class="d-inline-block align-text-top me-2 bigLog">
         </a>
     </div>
 </nav>
 <nav class="navbar navbar-expand-lg navbar-light navbar-effect">
     <div class="wrapper"></div>
-    <div class="container">
+    <div class="container containerBig">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -15,16 +15,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/scooters">Scooters</a>
+                    <a class="nav-link bigFont" routerLink="/scooters">Scooters</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/about">About us</a>
+                    <a class="nav-link bigFont" routerLink="/about">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/app">App</a>
+                    <a class="nav-link bigFont" routerLink="/app">App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/store">NIU Stores</a>
+                    <a class="nav-link bigFont" routerLink="/store">NIU Stores</a>
                 </li>
             </ul>
         </div>
