--- a/src/app/components/scooters-page/scooters-page.component.html
+++ b/src/app/components/scooters-page/scooters-page.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container-fluid mt-5">
     <div class="container d-flex justify-content-center align-items-center">
-        <img src="assets/img/imScootersPage/imgNgts.svg" class="w-25">
+        <img src="assets/img/imScootersPage/imgNgts.svg" class="w-25 imgBig">
     </div>
     <div class="row">
         <div class="col-lg-6 offset-lg-1">
@@ -46,38 +46,38 @@
         <div class="col-lg-4">
             <div class="pt-5">
                 <ul>
-                    <li class="fw-bold pb-4">
-                        <h5 class="fontResponsive">PERFORMANCE</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive pt-5">PERFORMANCE</h5>
                         <h6 class="fontColorGrayTwo">Top speed 80km/h, Range 60-70km</h6>
                     </li>
-                    <li class="fw-bold pb-4">
+                    <li class="fw-bold pb-4 fontResponsive">
                         <h5 class="fontResponsive">BATTERY</h5>
                         <h6 class="fontColorGrayTwo">Improved 4th Gen. NIU Energy Lithium Battery</h6>
                     </li>
-                    <li class="fw-bold pb-4">
+                    <li class="fw-bold pb-4 fontResponsive">
                         <h5 class="fontResponsive">COMFORT</h5>
                         <h6 class="fontColorGrayTwo">Large 14" Wheels, 180cm Ground Clearance</h6>
                     </li>
-                    <li class="fw-bold pb-4">
+                    <li class="fw-bold pb-4 fontResponsive">
                         <h5 class="fontResponsive">DESIGN</h5>
                         <h6 class="fontColorGrayTwo">Classic Design with New Display Face</h6>
                     </li>
-                    <li class="fw-bold pb-4">
+                    <li class="fw-bold pb-4 fontResponsive">
                         <h5 class="fontResponsive">SMART</h5>
                         <h6 class="fontColorGrayTwo">Smart APP Connectivity with Anti-theft Measures</h6>
                     </li>
                 </ul>
             </div>
             <div class="ps-5">
-                <h3 class="pb-2">From $3,999</h3>
+                <h3 class="pb-2 fontResponsive">From $3,999</h3>
                 <button type="button" class="btn btn-danger btn-lg">Find a Store</button>
             </div>
         </div>
     </div>
 </div>
 <div class="container d-flex justify-content-center align-items-center mt-4">
-    <div class="w-50">
-        <h3 class="text-center">BUILT FOR SPEED</h3>
+    <div class="w-100">
+        <h3 class="text-center fontResponsive">BUILT FOR SPEED</h3>
         <p class="text-center pt-4 fontColorGrayTwo">
             The NQi GT / NQi GTS has three unique driving modes - boost to top speed with SPORT mode, stretch the range out
             even farther with E-SAVE mode, or get the best of both worlds with DYNAMIC mode. These are e-mopeds designed to
@@ -130,34 +130,34 @@
         <div class="col-lg-4">
             <div class="pt-5">
                 <ul>
-                    <li class="fw-bold pb-4">
-                        <h5>NIU ENERGY</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive pt-5">NIU ENERGY</h5>
                         <h6 class="fontColorGrayTwo">2100Wh* Removable Battery</h6>
                     </li>
-                    <li class="fw-bold pb-4">
-                        <h5>NIU APP</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive">NIU APP</h5>
                         <h6 class="fontColorGrayTwo">24/7 Connected</h6>
                     </li>
-                    <li class="fw-bold pb-4">
-                        <h5>PERFORMANCE</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive">PERFORMANCE</h5>
                         <h6 class="fontColorGrayTwo">Instant Acceleration</h6>
                     </li>
-                    <li class="fw-bold pb-4">
-                        <h5>SECURITY</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive">SECURITY</h5>
                         <h6 class="fontColorGrayTwo">Anti-theft alerts</h6>
                     </li>
-                    <li class="fw-bold pb-4">
-                        <h5>NIU CLOUD</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive">NIU CLOUD</h5>
                         <h6 class="fontColorGrayTwo">Standard OTA Updates</h6>
                     </li>
-                    <li class="fw-bold pb-4">
-                        <h5>BOSCH MOTOR</h5>
+                    <li class="fw-bold pb-4 fontResponsive">
+                        <h5 class="fontResponsive">BOSCH MOTOR</h5>
                         <h6 class="fontColorGrayTwo">1800W Continuous Power</h6>
                     </li>
                 </ul>
             </div>
             <div class="ps-5">
-                <h3 class="pb-2">From $2,500</h3>
+                <h3 class="pb-2 fontResponsive">From $2,500</h3>
                 <button type="button" class="btn btn-danger btn-lg">Find a Store</button>
             </div>
         </div>
@@ -206,16 +206,16 @@
             </div>
         </div>
         <div class="col-lg-6 text-center">
-            <i class="fas fa-user-lock fontColorRed fs-1 pb-5"></i>
-            <h1>Created For Your Safety</h1>
-            <i class="fas fa-users fontColorRed fs-2 py-5"></i>
-            <h3>Enjoy a travel with your friends</h3>
+            <i class="fas fa-user-lock fontColorRed fs-1 pb-5 iconBig"></i>
+            <h1 class="fontResponsive">Created For Your Safety</h1>
+            <i class="fas fa-users fontColorRed fs-2 py-5 iconBig"></i>
+            <h3 class="fontResponsive">Enjoy a travel with your friends</h3>
             <p class="pt-5 fontColorGrayTwo">Ride a NIU is hat perfect moment at the end of a long day.</p>
         </div>
     </div>
 </div>
-<div class="container-fluid px-0 text-center mt-5">
-    <h1 class="fontColorRed">Beauty in the any angle</h1>
+<div class="container-fluid px-0 text-center my-5">
+    <h1 class="fontColorRed iconBig my-5">Beauty in the any angle</h1>
 </div>
 <div id="carouselEndScootersIndicators" class="carousel slide carousel-fade mt-5 w-100 mb-2" data-bs-ride="carousel">
     <div class="carousel-indicators">
