--- a/src/app/components/store-page/store-page.component.html
+++ b/src/app/components/store-page/store-page.component.html
@@ -1,6 +1,6 @@
 <p>store-page works!</p>
 
-<div class="container">
+<!-- <div class="container">
     <h1 #asText>Hola mundo</h1>
 </div>
 
@@ -25,4 +25,4 @@
 
 <div #miBotonTres class="divButton text-center">
     Click dos
-</div>
+</div> -->
