--- a/src/app/components/scooters-page/scooters-page.component.css
+++ b/src/app/components/scooters-page/scooters-page.component.css
@@ -1,16 +1,54 @@
+@media (min-width: 1700px) {
+    .fontResponsive{
+        font-size: 2.5rem;
+        padding-bottom: 5% !important;
+    }
+
+    .circleSelector{
+        width: 4% !important;
+        height: 35px !important;
+    }
+}
+
+@media (min-width: 2500px) {
+    .circleSelector{
+        width: 4% !important;
+        height: 55px !important;
+    }
+}
+
+@media (min-width: 3500px) {
+    .circleSelector{
+        width: 4% !important;
+        height: 80px !important;
+    }
+
+    .fontResponsive{
+        font-size: 4rem;
+        /* padding-bottom: 5% !important; */
+    }
+
+    .fontColorGrayTwo{
+        color: #959595 !important;
+        font-size: 3rem !important;
+    }
+
+    .imgBig{
+        width: 80% !important;
+    }
+
+    .iconBig{
+        font-size: 5rem !important;
+    }
+}
+
+
 .fontColorGrayTwo{
     color: #959595 !important;
 }
 
 .fontColorRed{
     color: #DF001F!important;
-}
-
-@media (min-width: 1700px) {
-    .fontResponsive{
-        font-size: 2.5rem;
-        padding-bottom: 5% !important;
-    }
 }
 
 .circleSelector{
